removed a few more fuzzy

--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-08-20 17:14+0100\n"
+"PO-Revision-Date: 2021-08-23 08:58+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -313,7 +313,6 @@ msgstr ""
 "de un árbol utilizando generadores de forma recursiva ::"
 
 #: ../Doc/whatsnew/2.3.rst:215
-#, fuzzy
 msgid ""
 "Two other examples in :file:`Lib/test/test_generators.py` produce solutions "
 "for the N-Queens problem (placing $N$ queens on an $NxN$ chess board so that "
@@ -328,7 +327,6 @@ msgstr ""
 "un tablero de ajedrez $NxN$ sin visitar ninguna casilla dos veces)."
 
 #: ../Doc/whatsnew/2.3.rst:220
-#, fuzzy
 msgid ""
 "The idea of generators comes from other programming languages, especially "
 "Icon (https://www.cs.arizona.edu/icon/), where the idea of generators is "
@@ -345,7 +343,6 @@ msgstr ""
 "htm da una idea de cómo es esto::"
 
 #: ../Doc/whatsnew/2.3.rst:230
-#, fuzzy
 msgid ""
 "In Icon the :func:`find` function returns the indexes at which the substring "
 "\"or\" is found: 3, 23, 33.  In the :keyword:`if` statement, ``i`` is first "
@@ -354,14 +351,13 @@ msgid ""
 "comparison now succeeds, and the code prints the value 23 to the screen."
 msgstr ""
 "En Icon la función :func:`find` retorna los índices en los que se encuentra "
-"la subcadena \"o\": 3, 23, 33.  En la sentencia :keyword:`if`, a ``i`` se le "
+"la subcadena \"o\": 3, 23, 33.  En la expresión :keyword:`if`, a ``i`` se le "
 "asigna primero un valor de 3, pero 3 es menor que 5, por lo que la "
 "comparación falla, e Icon la reintenta con el segundo valor de 23. 23 es "
 "mayor que 5, por lo que la comparación ahora tiene éxito, y el código "
 "imprime el valor 23 en la pantalla."
 
 #: ../Doc/whatsnew/2.3.rst:236
-#, fuzzy
 msgid ""
 "Python doesn't go nearly as far as Icon in adopting generators as a central "
 "concept.  Generators are considered part of the core Python language, but "
@@ -380,12 +376,10 @@ msgstr ""
 "que puede pasarse a otras funciones o almacenarse en una estructura de datos."
 
 #: ../Doc/whatsnew/2.3.rst:248
-#, fuzzy
 msgid ":pep:`255` - Simple Generators"
 msgstr ":pep:`255` - Generadores simples"
 
 #: ../Doc/whatsnew/2.3.rst:248
-#, fuzzy
 msgid ""
 "Written by Neil Schemenauer, Tim Peters, Magnus Lie Hetland.  Implemented "
 "mostly by Neil Schemenauer and Tim Peters, with other fixes from the Python "
@@ -396,12 +390,10 @@ msgstr ""
 "equipo de Python Labs."
 
 #: ../Doc/whatsnew/2.3.rst:257
-#, fuzzy
 msgid "PEP 263: Source Code Encodings"
 msgstr "PEP 263: Codificación del código fuente"
 
 #: ../Doc/whatsnew/2.3.rst:259
-#, fuzzy
 msgid ""
 "Python source files can now be declared as being in different character set "
 "encodings.  Encodings are declared by including a specially formatted "
@@ -414,7 +406,6 @@ msgstr ""
 "del archivo fuente.  Por ejemplo, un archivo UTF-8 puede declararse con::"
 
 #: ../Doc/whatsnew/2.3.rst:267
-#, fuzzy
 msgid ""
 "Without such an encoding declaration, the default encoding used is 7-bit "
 "ASCII. Executing or importing modules that contain string literals with 8-"
@@ -429,7 +420,6 @@ msgstr ""
 "2.3; en 2.4 será un error de sintaxis."
 
 #: ../Doc/whatsnew/2.3.rst:273
-#, fuzzy
 msgid ""
 "The encoding declaration only affects Unicode string literals, which will be "
 "converted to Unicode using the specified encoding.  Note that Python "
@@ -443,13 +433,11 @@ msgstr ""
 "variables que utilicen caracteres fuera de los alfanuméricos habituales."
 
 #: ../Doc/whatsnew/2.3.rst:282
-#, fuzzy
 msgid ":pep:`263` - Defining Python Source Code Encodings"
 msgstr ""
 ":pep:`263` - Definición de las codificaciones del código fuente de Python"
 
 #: ../Doc/whatsnew/2.3.rst:282
-#, fuzzy
 msgid ""
 "Written by Marc-André Lemburg and Martin von Löwis; implemented by Suzuki "
 "Hisao and Martin von Löwis."
@@ -458,12 +446,10 @@ msgstr ""
 "Hisao y Martin von Löwis."
 
 #: ../Doc/whatsnew/2.3.rst:289
-#, fuzzy
 msgid "PEP 273: Importing Modules from ZIP Archives"
 msgstr "PEP 273: Importar módulos desde archivos ZIP"
 
 #: ../Doc/whatsnew/2.3.rst:291
-#, fuzzy
 msgid ""
 "The new :mod:`zipimport` module adds support for importing modules from a "
 "ZIP-format archive.  You don't need to import the module explicitly; it will "
@@ -476,7 +462,6 @@ msgstr ""
 "archivo ZIP a ``sys.path``. Por ejemplo:"
 
 #: ../Doc/whatsnew/2.3.rst:314
-#, fuzzy
 msgid ""
 "An entry in ``sys.path`` can now be the filename of a ZIP archive. The ZIP "
 "archive can contain any kind of files, but only files named :file:`\\*.py`, :"
@@ -494,7 +479,6 @@ msgstr ""
 "\\*.pyc`, la importación puede ser bastante lenta."
 
 #: ../Doc/whatsnew/2.3.rst:321
-#, fuzzy
 msgid ""
 "A path within the archive can also be specified to only import from a "
 "subdirectory; for example, the path :file:`/tmp/example.zip/lib/` would only "
@@ -505,12 +489,10 @@ msgstr ""
 "importaría del subdirectorio :file:`lib/` dentro del archivo."
 
 #: ../Doc/whatsnew/2.3.rst:331
-#, fuzzy
 msgid ":pep:`273` - Import Modules from Zip Archives"
 msgstr ":pep:`273` - Importación de módulos desde archivos Zip"
 
 #: ../Doc/whatsnew/2.3.rst:329
-#, fuzzy
 msgid ""
 "Written by James C. Ahlstrom,  who also provided an implementation. Python "
 "2.3 follows the specification in :pep:`273`,  but uses an implementation "
