a few more corrections and removal of fuzzies

--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-08-23 08:58+0100\n"
+"PO-Revision-Date: 2021-08-24 09:08+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -507,12 +507,10 @@ msgstr ""
 "para una descripción de los nuevos ganchos de importación."
 
 #: ../Doc/whatsnew/2.3.rst:338
-#, fuzzy
 msgid "PEP 277: Unicode file name support for Windows NT"
 msgstr "PEP 277: Soporte de nombres de archivo Unicode para Windows NT"
 
 #: ../Doc/whatsnew/2.3.rst:340
-#, fuzzy
 msgid ""
 "On Windows NT, 2000, and XP, the system stores file names as Unicode "
 "strings. Traditionally, Python has represented file names as byte strings, "
@@ -524,7 +522,6 @@ msgstr ""
 "nombres de archivo sean inaccesibles."
 
 #: ../Doc/whatsnew/2.3.rst:344
-#, fuzzy
 msgid ""
 "Python now allows using arbitrary Unicode strings (within the limitations of "
 "the file system) for all functions that expect file names, most notably the :"
@@ -540,7 +537,6 @@ msgstr ""
 "directorio actual como una cadena Unicode."
 
 #: ../Doc/whatsnew/2.3.rst:350
-#, fuzzy
 msgid ""
 "Byte strings still work as file names, and on Windows Python will "
 "transparently convert them to Unicode using the ``mbcs`` encoding."
@@ -550,7 +546,6 @@ msgstr ""
 "codificación ``mbcs``."
 
 #: ../Doc/whatsnew/2.3.rst:353
-#, fuzzy
 msgid ""
 "Other systems also allow Unicode strings as file names but convert them to "
 "byte strings before passing them to the system, which can cause a :exc:"
@@ -565,18 +560,15 @@ msgstr ""
 "attr:`os.path.supports_unicode_filenames`, un valor booleano."
 
 #: ../Doc/whatsnew/2.3.rst:359
-#, fuzzy
 msgid "Under MacOS, :func:`os.listdir` may now return Unicode filenames."
 msgstr ""
 "En MacOS, :func:`os.listdir` ahora puede retornar nombres de archivo Unicode."
 
 #: ../Doc/whatsnew/2.3.rst:365
-#, fuzzy
 msgid ":pep:`277` - Unicode file name support for Windows NT"
 msgstr ":pep:`277` - Soporte de nombres de archivo Unicode para Windows NT"
 
 #: ../Doc/whatsnew/2.3.rst:365
-#, fuzzy
 msgid ""
 "Written by Neil Hodgson; implemented by Neil Hodgson, Martin von Löwis, and "
 "Mark Hammond."
@@ -585,12 +577,10 @@ msgstr ""
 "Mark Hammond."
 
 #: ../Doc/whatsnew/2.3.rst:375
-#, fuzzy
 msgid "PEP 278: Universal Newline Support"
 msgstr "PEP 278: Soporte universal de nuevas líneas"
 
 #: ../Doc/whatsnew/2.3.rst:377
-#, fuzzy
 msgid ""
 "The three major operating systems used today are Microsoft Windows, Apple's "
 "Macintosh OS, and the various Unix derivatives.  A minor irritation of cross-"
@@ -609,7 +599,6 @@ msgstr ""
 "carro más una nueva línea."
 
 #: ../Doc/whatsnew/2.3.rst:384
-#, fuzzy
 msgid ""
 "Python's file objects can now support end of line conventions other than the "
 "one followed by the platform on which Python is running. Opening a file with "
@@ -627,7 +616,6 @@ msgstr ""
 "`readline`."
 
 #: ../Doc/whatsnew/2.3.rst:391
-#, fuzzy
 msgid ""
 "Universal newline support is also used when importing modules and when "
 "executing a file with the :func:`execfile` function.  This means that Python "
@@ -640,7 +628,6 @@ msgstr ""
 "operativos sin necesidad de convertir los finales de línea."
 
 #: ../Doc/whatsnew/2.3.rst:396
-#, fuzzy
 msgid ""
 "This feature can be disabled when compiling Python by specifying the :option:"
 "`!--without-universal-newlines` switch when running Python's :program:"
@@ -651,22 +638,18 @@ msgstr ""
 "`configure` de Python."
 
 #: ../Doc/whatsnew/2.3.rst:403
-#, fuzzy
 msgid ":pep:`278` - Universal Newline Support"
 msgstr ":pep:`278` - Soporte universal de nuevas líneas"
 
 #: ../Doc/whatsnew/2.3.rst:404
-#, fuzzy
 msgid "Written and implemented by Jack Jansen."
 msgstr "Escrito y ejecutado por Jack Jansen."
 
 #: ../Doc/whatsnew/2.3.rst:412
-#, fuzzy
 msgid "PEP 279: enumerate()"
-msgstr "PEP 279: enumerar()"
+msgstr "PEP 279: enumerate()"
 
 #: ../Doc/whatsnew/2.3.rst:414
-#, fuzzy
 msgid ""
 "A new built-in function, :func:`enumerate`, will make certain loops a bit "
 "clearer.  ``enumerate(thing)``, where *thing* is either an iterator or a "
@@ -674,29 +657,25 @@ msgid ""
 "thing[1])``, ``(2, thing[2])``, and so forth."
 msgstr ""
 "Una nueva función incorporada, :func:`enumerate`, hará que ciertos bucles "
-"sean un poco más claros.  ``enumerar(cosa)``, donde *cosa* es un iterador o "
+"sean un poco más claros.  ``enumerate(cosa)``, donde *cosa* es un iterador o "
 "una secuencia, retorna un iterador que retornará ``(0, cosa[0])``, ``(1, "
 "cosa[1])``, ``(2, cosa[2])``, y así sucesivamente."
 
 #: ../Doc/whatsnew/2.3.rst:419
-#, fuzzy
 msgid "A common idiom to change every element of a list looks like this::"
 msgstr ""
 "Un modismo común para cambiar cada elemento de una lista tiene el siguiente "
 "aspecto::"
 
 #: ../Doc/whatsnew/2.3.rst:426
-#, fuzzy
 msgid "This can be rewritten using :func:`enumerate` as::"
 msgstr "Esto se puede reescribir usando :func:`enumerate` como::"
 
 #: ../Doc/whatsnew/2.3.rst:435
-#, fuzzy
 msgid ":pep:`279` - The enumerate() built-in function"
 msgstr ":pep:`279` - La función incorporada enumerate()"
 
 #: ../Doc/whatsnew/2.3.rst:436
-#, fuzzy
 msgid "Written and implemented by Raymond D. Hettinger."
 msgstr "Escrito y ejecutado por Raymond D. Hettinger."
 
