--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-08-24 09:08+0100\n"
+"PO-Revision-Date: 2021-08-26 08:30+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -680,12 +680,10 @@ msgid "Written and implemented by Raymond D. Hettinger."
 msgstr "Escrito y ejecutado por Raymond D. Hettinger."
 
 #: ../Doc/whatsnew/2.3.rst:442
-#, fuzzy
 msgid "PEP 282: The logging Package"
 msgstr "PEP 282: El paquete de registro"
 
 #: ../Doc/whatsnew/2.3.rst:444
-#, fuzzy
 msgid ""
 "A standard package for writing logs, :mod:`logging`, has been added to "
 "Python 2.3.  It provides a powerful and flexible mechanism for generating "
@@ -707,7 +705,6 @@ msgstr ""
 "también es posible escribir tus propias clases de manejadores."
 
 #: ../Doc/whatsnew/2.3.rst:453
-#, fuzzy
 msgid ""
 "The :class:`Logger` class is the primary class. Most application code will "
 "deal with one or more :class:`Logger` objects, each one used by a particular "
@@ -735,7 +732,6 @@ msgstr ""
 "padre de todos los demás loggers."
 
 #: ../Doc/whatsnew/2.3.rst:464
-#, fuzzy
 msgid ""
 "For simple uses, the :mod:`logging` package contains some convenience "
 "functions that always use the root log::"
@@ -744,12 +740,10 @@ msgstr ""
 "conveniencia que siempre utilizan la raíz log::"
 
 #: ../Doc/whatsnew/2.3.rst:475 ../Doc/whatsnew/2.3.rst:500
-#, fuzzy
 msgid "This produces the following output::"
 msgstr "Esto produce la siguiente salida::"
 
 #: ../Doc/whatsnew/2.3.rst:481
-#, fuzzy
 msgid ""
 "In the default configuration, informational and debugging messages are "
 "suppressed and the output is sent to standard error.  You can enable the "
@@ -762,7 +756,6 @@ msgstr ""
 "meth:`setLevel` del registrador raíz."
 
 #: ../Doc/whatsnew/2.3.rst:486
-#, fuzzy
 msgid ""
 "Notice the :func:`warning` call's use of string formatting operators; all of "
 "the functions for logging messages take the arguments ``(msg, arg1, "
@@ -774,7 +767,6 @@ msgstr ""
 "``msg % (arg1, arg2, ...)``."
 
 #: ../Doc/whatsnew/2.3.rst:490
-#, fuzzy
 msgid ""
 "There's also an :func:`exception` function that records the most recent "
 "traceback.  Any of the other functions will also record the traceback if you "
@@ -786,7 +778,6 @@ msgstr ""
 "*exc_info*. ::"
 
 #: ../Doc/whatsnew/2.3.rst:508
-#, fuzzy
 msgid ""
 "Slightly more advanced programs will use a logger other than the root "
 "logger. The ``getLogger(name)`` function is used to get a particular log, "
@@ -799,7 +790,6 @@ msgstr ""
 "logger raíz. ::"
 
 #: ../Doc/whatsnew/2.3.rst:519
-#, fuzzy
 msgid ""
 "Log records are usually propagated up the hierarchy, so a message logged to "
 "``server.auth`` is also seen by ``server`` and ``root``, but a :class:"
@@ -812,7 +802,6 @@ msgstr ""
 "atributo :attr:`propagate` a :const:`False`."
 
 #: ../Doc/whatsnew/2.3.rst:523
-#, fuzzy
 msgid ""
 "There are more classes provided by the :mod:`logging` package that can be "
 "customized.  When a :class:`Logger` instance is told to log a message, it "
@@ -836,7 +825,6 @@ msgstr ""
 "clases especialmente escritas."
 
 #: ../Doc/whatsnew/2.3.rst:533
-#, fuzzy
 msgid ""
 "With all of these features the :mod:`logging` package should provide enough "
 "flexibility for even the most complicated applications.  This is only an "
@@ -851,22 +839,18 @@ msgstr ""
 "los detalles.  La lectura de :pep:`282` también será útil."
 
 #: ../Doc/whatsnew/2.3.rst:541
-#, fuzzy
 msgid ":pep:`282` - A Logging System"
 msgstr ":pep:`282` - Un sistema de registro"
 
 #: ../Doc/whatsnew/2.3.rst:542
-#, fuzzy
 msgid "Written by Vinay Sajip and Trent Mick; implemented by Vinay Sajip."
 msgstr "Escrito por Vinay Sajip y Trent Mick; implementado por Vinay Sajip."
 
 #: ../Doc/whatsnew/2.3.rst:550
-#, fuzzy
 msgid "PEP 285: A Boolean Type"
 msgstr "PEP 285: Un tipo booleano"
 
 #: ../Doc/whatsnew/2.3.rst:552
-#, fuzzy
 msgid ""
 "A Boolean type was added to Python 2.3.  Two new constants were added to "
 "the :mod:`__builtin__` module, :const:`True` and :const:`False`.  (:const:"
@@ -881,7 +865,6 @@ msgstr ""
 "simplemente a valores enteros de 1 y 0 y no son un tipo diferente)"
 
 #: ../Doc/whatsnew/2.3.rst:558
-#, fuzzy
 msgid ""
 "The type object for this new type is named :class:`bool`; the constructor "
 "for it takes any Python value and converts it to :const:`True` or :const:"
@@ -892,7 +875,6 @@ msgstr ""
 "o :const:`False`. ::"
 
 #: ../Doc/whatsnew/2.3.rst:570
-#, fuzzy
 msgid ""
 "Most of the standard library modules and built-in functions have been "
 "changed to return Booleans. ::"
@@ -901,7 +883,6 @@ msgstr ""
 "incorporadas se han modificado para retornar booleanos. ::"
 
 #: ../Doc/whatsnew/2.3.rst:581
-#, fuzzy
 msgid ""
 "Python's Booleans were added with the primary goal of making code clearer.  "
 "For example, if you're reading a function and encounter the statement "
@@ -918,7 +899,6 @@ msgstr ""
 "significado del valor de retorno es bastante claro."
 
 #: ../Doc/whatsnew/2.3.rst:587
-#, fuzzy
 msgid ""
 "Python's Booleans were *not* added for the sake of strict type-checking.  A "
 "very strict language such as Pascal would also prevent you performing "
@@ -941,35 +921,30 @@ msgstr ""
 "`int` por lo que la aritmética que utiliza un Booleano sigue funcionando. ::"
 
 #: ../Doc/whatsnew/2.3.rst:605
-#, fuzzy
 msgid ""
 "To sum up :const:`True` and :const:`False` in a sentence: they're "
 "alternative ways to spell the integer values 1 and 0, with the single "
 "difference that :func:`str` and :func:`repr` return the strings ``'True'`` "
 "and ``'False'`` instead of ``'1'`` and ``'0'``."
 msgstr ""
-"Para resumir :const:`Verdadero` y :const:`Falso` en una frase: son formas "
+"Para resumir :const:`True` and :const:`False`  en una frase: son formas "
 "alternativas de deletrear los valores enteros 1 y 0, con la única diferencia "
 "de que :func:`str` y :func:`repr` retornan las cadenas ``Verdadero`` y "
 "``Falso`` en lugar de ``1`` y ``0``."
 
 #: ../Doc/whatsnew/2.3.rst:613
-#, fuzzy
 msgid ":pep:`285` - Adding a bool type"
 msgstr ":pep:`285` - Añadir un tipo booleano"
 
 #: ../Doc/whatsnew/2.3.rst:614
-#, fuzzy
 msgid "Written and implemented by GvR."
 msgstr "Escrito y ejecutado por GvR."
 
 #: ../Doc/whatsnew/2.3.rst:620
-#, fuzzy
 msgid "PEP 293: Codec Error Handling Callbacks"
 msgstr "PEP 293: Llamadas de retorno para el manejo de errores del códec"
 
 #: ../Doc/whatsnew/2.3.rst:622
-#, fuzzy
 msgid ""
 "When encoding a Unicode string into a byte string, unencodable characters "
 "may be encountered.  So far, Python has allowed specifying the error "
@@ -990,7 +965,6 @@ msgstr ""
 "de entidad HTML en la cadena convertida."
 
 #: ../Doc/whatsnew/2.3.rst:630
-#, fuzzy
 msgid ""
 "Python now has a flexible framework to add different processing strategies.  "
 "New error handlers can be added with :func:`codecs.register_error`, and "
@@ -1012,7 +986,6 @@ msgstr ""
 "reemplazo."
 
 #: ../Doc/whatsnew/2.3.rst:638
-#, fuzzy
 msgid ""
 "Two additional error handlers have been implemented using this framework: "
 "\"backslashreplace\" uses Python backslash quoting to represent unencodable "
@@ -1024,22 +997,18 @@ msgstr ""
 "\" emite referencias de caracteres XML."
 
 #: ../Doc/whatsnew/2.3.rst:645
-#, fuzzy
 msgid ":pep:`293` - Codec Error Handling Callbacks"
 msgstr ":pep:`293` - Retrollamadas de manejo de errores del códec"
 
 #: ../Doc/whatsnew/2.3.rst:646
-#, fuzzy
 msgid "Written and implemented by Walter Dörwald."
 msgstr "Escrito y ejecutado por Walter Dörwald."
 
 #: ../Doc/whatsnew/2.3.rst:654
-#, fuzzy
 msgid "PEP 301: Package Index and Metadata for Distutils"
 msgstr "PEP 301: Índice de paquetes y metadatos para Distutils"
 
 #: ../Doc/whatsnew/2.3.rst:656
-#, fuzzy
 msgid ""
 "Support for the long-requested Python catalog makes its first appearance in "
 "2.3."
@@ -1048,7 +1017,6 @@ msgstr ""
 "primera aparición en 2.3."
 
 #: ../Doc/whatsnew/2.3.rst:658
-#, fuzzy
 msgid ""
 "The heart of the catalog is the new Distutils :command:`register` command. "
 "Running ``python setup.py register`` will collect the metadata describing a "
@@ -1063,7 +1031,6 @@ msgstr ""
 "está disponible en https://pypi.org."
 
 #: ../Doc/whatsnew/2.3.rst:664
-#, fuzzy
 msgid ""
 "To make the catalog a bit more useful, a new optional *classifiers* keyword "
 "argument has been added to the Distutils :func:`setup` function.  A list of "
@@ -1076,7 +1043,6 @@ msgstr ""
 "catb.org/~esr/trove/>`_ para ayudar a clasificar el software."
 
 #: ../Doc/whatsnew/2.3.rst:669
-#, fuzzy
 msgid ""
 "Here's an example :file:`setup.py` with classifiers, written to be "
 "compatible with older versions of the Distutils::"
@@ -1085,7 +1051,6 @@ msgstr ""
 "sea compatible con las versiones más antiguas de Distutils::"
 
 #: ../Doc/whatsnew/2.3.rst:688
-#, fuzzy
 msgid ""
 "The full list of classifiers can be obtained by running  ``python setup.py "
 "register --list-classifiers``."
@@ -1094,22 +1059,18 @@ msgstr ""
 "setup.py register --list-classifiers``."
 
 #: ../Doc/whatsnew/2.3.rst:694
-#, fuzzy
 msgid ":pep:`301` - Package Index and Metadata for Distutils"
 msgstr ":pep:`301` - Índice de paquetes y metadatos para Distutils"
 
 #: ../Doc/whatsnew/2.3.rst:695
-#, fuzzy
 msgid "Written and implemented by Richard Jones."
 msgstr "Escrito y ejecutado por Richard Jones."
 
 #: ../Doc/whatsnew/2.3.rst:703
-#, fuzzy
 msgid "PEP 302: New Import Hooks"
 msgstr "PEP 302: Nuevos ganchos de importación"
 
 #: ../Doc/whatsnew/2.3.rst:705
-#, fuzzy
 msgid ""
 "While it's been possible to write custom import hooks ever since the :mod:"
 "`ihooks` module was introduced in Python 1.3, no one has ever been really "
@@ -1126,7 +1087,6 @@ msgstr ""
 "mucha aceptación, y ninguno era fácilmente utilizable desde el código C."
 
 #: ../Doc/whatsnew/2.3.rst:712
-#, fuzzy
 msgid ""
 ":pep:`302` borrows ideas from its predecessors, especially from Gordon "
 "McMillan's :mod:`iu` module.  Three new items  are added to the :mod:`sys` "
@@ -1137,20 +1097,18 @@ msgstr ""
 "módulo :mod:`sys`:"
 
 #: ../Doc/whatsnew/2.3.rst:716
-#, fuzzy
 msgid ""
 "``sys.path_hooks`` is a list of callable objects; most  often they'll be "
 "classes.  Each callable takes a string containing a path and either returns "
 "an importer object that will handle imports from this path or raises an :exc:"
 "`ImportError` exception if it can't handle this path."
 msgstr ""
-"``sys.path_hooks`` es una lista de objetos llamables; la mayoría de las "
+"``sys.path_hooks`` es una lista de objetos invocables; la mayoría de las "
 "veces serán clases.  Cada llamada toma una cadena que contiene una ruta y "
 "retorna un objeto importador que manejará las importaciones desde esta ruta "
 "o lanza una excepción :exc:`ImportError` si no puede manejar esta ruta."
 
 #: ../Doc/whatsnew/2.3.rst:721
-#, fuzzy
 msgid ""
 "``sys.path_importer_cache`` caches importer objects for each path, so ``sys."
 "path_hooks`` will only need to be traversed once for each path."
@@ -1160,7 +1118,6 @@ msgstr ""
 "una vez para cada ruta."
 
 #: ../Doc/whatsnew/2.3.rst:724
-#, fuzzy
 msgid ""
 "``sys.meta_path`` is a list of importer objects that will be traversed "
 "before ``sys.path`` is checked.  This list is initially empty, but user code "
@@ -1174,7 +1131,6 @@ msgstr ""
 "lista."
 
 #: ../Doc/whatsnew/2.3.rst:729
-#, fuzzy
 msgid ""
 "Importer objects must have a single method, ``find_module(fullname, "
 "path=None)``.  *fullname* will be a module or package name, e.g. ``string`` "
@@ -1190,7 +1146,6 @@ msgstr ""
 "correspondiente."
 
 #: ../Doc/whatsnew/2.3.rst:735
-#, fuzzy
 msgid ""
 "Pseudo-code for Python's new import logic, therefore, looks something like "
 "this (simplified a bit; see :pep:`302` for the full details)::"
@@ -1200,24 +1155,20 @@ msgstr ""
 "completos)::"
 
 #: ../Doc/whatsnew/2.3.rst:760
-#, fuzzy
 msgid ":pep:`302` - New Import Hooks"
 msgstr ":pep:`302` - Nuevos ganchos de importación"
 
 #: ../Doc/whatsnew/2.3.rst:761
-#, fuzzy
 msgid ""
 "Written by Just van Rossum and Paul Moore. Implemented by Just van Rossum."
 msgstr ""
 "Escrito por Just van Rossum y Paul Moore. Implementado por Just van Rossum."
 
 #: ../Doc/whatsnew/2.3.rst:769
-#, fuzzy
 msgid "PEP 305: Comma-separated Files"
 msgstr "PEP 305: Archivos separados por comas"
 
 #: ../Doc/whatsnew/2.3.rst:771
-#, fuzzy
 msgid ""
 "Comma-separated files are a format frequently used for exporting data from "
 "databases and spreadsheets.  Python 2.3 adds a parser for comma-separated "
@@ -1228,13 +1179,11 @@ msgstr ""
 "un analizador de archivos separados por comas."
 
 #: ../Doc/whatsnew/2.3.rst:774
-#, fuzzy
 msgid "Comma-separated format is deceptively simple at first glance::"
 msgstr ""
 "El formato separado por comas es engañosamente sencillo a primera vista::"
 
 #: ../Doc/whatsnew/2.3.rst:778
-#, fuzzy
 msgid ""
 "Read a line and call ``line.split(',')``: what could be simpler? But toss in "
 "string data that can contain commas, and things get more complicated::"
@@ -1244,7 +1193,6 @@ msgstr ""
 "complican::"
 
 #: ../Doc/whatsnew/2.3.rst:783
-#, fuzzy
 msgid ""
 "A big ugly regular expression can parse this, but using the new  :mod:`csv` "
 "package is much simpler::"
@@ -1253,7 +1201,6 @@ msgstr ""
 "paquete :mod:`csv` es mucho más sencillo::"
 
 #: ../Doc/whatsnew/2.3.rst:793
-#, fuzzy
 msgid ""
 "The :func:`reader` function takes a number of different options. The field "
 "separator isn't limited to the comma and can be changed to any character, "
@@ -1264,7 +1211,6 @@ msgstr ""
 "las comillas y el final de línea."
 
 #: ../Doc/whatsnew/2.3.rst:797
-#, fuzzy
 msgid ""
 "Different dialects of comma-separated files can be defined and registered; "
 "currently there are two dialects, both used by Microsoft Excel. A separate :"
@@ -1278,12 +1224,10 @@ msgstr ""
 "contengan el delimitador."
 
 #: ../Doc/whatsnew/2.3.rst:806
-#, fuzzy
 msgid ":pep:`305` - CSV File API"
 msgstr ":pep:`305` - API de archivos CSV"
 
 #: ../Doc/whatsnew/2.3.rst:806
-#, fuzzy
 msgid ""
 "Written and implemented  by Kevin Altis, Dave Cole, Andrew McNamara, Skip "
 "Montanaro, Cliff Wells."
@@ -1292,12 +1236,10 @@ msgstr ""
 "Montanaro, Cliff Wells."
 
 #: ../Doc/whatsnew/2.3.rst:815
-#, fuzzy
 msgid "PEP 307: Pickle Enhancements"
-msgstr "PEP 307: Mejoras en los pepinillos"
+msgstr "PEP 307: Mejoras en Pickle"
 
 #: ../Doc/whatsnew/2.3.rst:817
-#, fuzzy
 msgid ""
 "The :mod:`pickle` and :mod:`cPickle` modules received some attention during "
 "the 2.3 development cycle.  In 2.2, new-style classes could be pickled "
@@ -1307,13 +1249,12 @@ msgid ""
 msgstr ""
 "Los módulos :mod:`pickle` y :mod:`cPickle` recibieron cierta atención "
 "durante el ciclo de desarrollo de la 2.3.  En 2.2, las clases de estilo "
-"nuevo podían ser decapadas sin dificultad, pero no se decapaban de forma muy "
-"compacta; :pep:`307` cita un ejemplo trivial en el que una clase de estilo "
-"nuevo da lugar a una cadena decapada tres veces más larga que la de una "
-"clase clásica."
+"nuevo podían ser desempaquetadas sin dificultad, pero no se desempaquetaba "
+"de forma muy compacta; :pep:`307` cita un ejemplo trivial en el que una "
+"clase de estilo nuevo da lugar a una cadena desempaquetada tres veces más "
+"larga que la de una clase clásica."
 
 #: ../Doc/whatsnew/2.3.rst:823
-#, fuzzy
 msgid ""
 "The solution was to invent a new pickle protocol.  The :func:`pickle.dumps` "
 "function has supported a text-or-binary flag  for a long time.  In 2.3, this "
@@ -1331,7 +1272,6 @@ msgstr ""
 "seleccionar el protocolo más elegante disponible."
 
 #: ../Doc/whatsnew/2.3.rst:830
-#, fuzzy
 msgid ""
 "Unpickling is no longer considered a safe operation.  2.2's :mod:`pickle` "
 "provided hooks for trying to prevent unsafe classes from being unpickled "
@@ -1339,48 +1279,44 @@ msgid ""
 "this code was ever audited and therefore it's all been ripped out in 2.3.  "
 "You should not unpickle untrusted data in any version of Python."
 msgstr ""
-"El desescalado ya no se considera una operación segura.  2.El :mod:`pickle` "
-"de la versión 2 proporcionaba ganchos para tratar de evitar que las clases "
-"no seguras fueran deserializadas (específicamente, un atributo :attr:"
+"El unpickling ya no se considera una operación segura. El :mod:`pickle` de "
+"la versión 2.2 proporcionaba ganchos para tratar de evitar que las clases no "
+"seguras fueran deserializadas (específicamente, un atributo :attr:"
 "`__safe_for_unpickling__`), pero nada de este código fue nunca auditado y "
 "por lo tanto todo ha sido eliminado en la versión 2.3.  No se debe "
 "deserializar datos no confiables en ninguna versión de Python."
 
 #: ../Doc/whatsnew/2.3.rst:836
-#, fuzzy
 msgid ""
 "To reduce the pickling overhead for new-style classes, a new interface for "
 "customizing pickling was added using three special methods: :meth:"
 "`__getstate__`, :meth:`__setstate__`, and :meth:`__getnewargs__`.  Consult :"
 "pep:`307` for the full semantics  of these methods."
 msgstr ""
-"Para reducir la sobrecarga de decapado de las clases de estilo nuevo, se ha "
-"añadido una nueva interfaz para personalizar el decapado mediante tres "
+"Para reducir la sobrecarga de pickling de las clases de estilo nuevo, se ha "
+"añadido una nueva interfaz para personalizar el pickling mediante tres "
 "métodos especiales: :meth:`__getstate__`, :meth:`__setstate__`, y :meth:"
 "`__getnewargs__`.  Consulte :pep:`307` para conocer la semántica completa de "
 "estos métodos."
 
 #: ../Doc/whatsnew/2.3.rst:841
-#, fuzzy
 msgid ""
 "As a way to compress pickles yet further, it's now possible to use integer "
 "codes instead of long strings to identify pickled classes. The Python "
 "Software Foundation will maintain a list of standardized codes; there's also "
 "a range of codes for private use.  Currently no codes have been specified."
 msgstr ""
-"Como forma de comprimir aún más los serializados, ahora es posible utilizar "
+"Como forma de comprimir aún más los pickles, ahora es posible utilizar "
 "códigos enteros en lugar de cadenas largas para identificar las clases "
 "serializadas. La Python Software Foundation mantendrá una lista de códigos "
 "estandarizados; también hay una gama de códigos para uso privado.  "
 "Actualmente no se ha especificado ningún código."
 
 #: ../Doc/whatsnew/2.3.rst:849
-#, fuzzy
 msgid ":pep:`307` - Extensions to the pickle protocol"
 msgstr ":pep:`307` - Extensiones del protocolo pickle"
 
 #: ../Doc/whatsnew/2.3.rst:850
-#, fuzzy
 msgid "Written and implemented  by Guido van Rossum and Tim Peters."
 msgstr "Escrito y ejecutado por Guido van Rossum y Tim Peters."
 
